Fixed Layout Bugs

--- a/css/main.css
+++ b/css/main.css
@@ -6,34 +6,34 @@
 }
 
 .navbar{
-  position: absolute;
-  display: inline-block;
-  float:left;width:30%;height:100%;
+  float:left;
+  position:fixed;
+  width:30%;height:100%;
   background-color: #32325b;
 }
-.dropbox{width:50%;}
+.dropbox{
+  padding-top: 50px;
+  text-align: center;}
 .dropbox img{
-  vertical-align: middle;
-  width:80px;height:60px;
-  position: absolute;
-  top: 10%;left: 10%;
-}
+  width:20%;}
+.menubar{
+  padding-top: 50px;
+  margin:0 auto;
+  text-align:center;
+  width:30%;}
+
 .menu{
-  position: absolute;top: 25%;
-  vertical-align: middle;
+  display: inline;
   list-style: none;
-  clear: both;
-  margin: 0;padding: 0;
-  }
+  width:30%;text-align:left;}
 .menu li {
   line-height: 200%;
-  text-align: left;padding-left: 10px;
+  padding-left: 10px;
 }
 .menu li a:hover {
 }
 .menu a {
   color:#fff;
-  text-align: center;
   text-decoration: none;
   padding: 14px 6px;}
 
@@ -54,6 +54,10 @@
   color:#4b3939;
 }
 .titles span:hover{
+  background-color: #4b3939;
+  color:#fff;
+}
+.titles span:active{
   background-color: #4b3939;
   color:#fff;
 }
